@@ -9,11 +9,15 @@ common: &default_settings
     password:
   export:
     type: stdout
+  newrelic:
+    enabled: true
   logging:
     type: stdout
 
 test:
   <<: *default_settings
+  newrelic:
+    enabled: false
 
 development:
   <<: *default_settings
